# mars-api-rs

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build-test.yml  build.yml
mars_api_rs_macro/: Cargo.toml
mars_api_rs_macro/mars_api_rs_derive/: Cargo.toml
mars_api_rs_macro/mars_api_rs_derive/src/: lib.rs
mars_api_rs_macro/src/: lib.rs
src/: config.rs  main.rs
src/database/: cache.rs  mod.rs
src/database/models/: broadcast.rs  death.rs  join_sound.rs  level.rs  level_color.rs  match.rs  mod.rs  participant.rs  player.rs  punishment.rs  rank.rs  server.rs  session.rs  tag.rs
src/http/: mod.rs
src/http/broadcast/: mod.rs
src/http/leaderboard/: mod.rs
src/http/level/: mod.rs
src/http/map/: mod.rs  payload.rs
src/http/match/: mod.rs
src/http/perks/: mod.rs  payload.rs
src/http/player/: mod.rs  payloads.rs
src/http/punishment/: mod.rs  payloads.rs
src/http/rank/: mod.rs  payload.rs
src/http/report/: mod.rs  payload.rs
src/http/server/: mod.rs  payloads.rs
src/http/status/: mod.rs
src/http/tag/: mod.rs  payload.rs
src/socket/: event_type.rs  mod.rs  socket_handler.rs  socket_router.rs
src/socket/leaderboard/: leaderboard_listener.rs  mod.rs
src/socket/map/: map_record_listener.rs  mod.rs
src/socket/match/: match_events.rs  match_phase_listener.rs  mod.rs
src/socket/objective/: mod.rs  objective_events.rs
src/socket/participant/: mod.rs  participant_context.rs  participant_party_listener.rs  (+1 more)
src/util/: auth.rs  error.rs  file.rs  macro.rs  mod.rs  responder.rs  string.rs  time.rs  webhook.rs
(+11 files in other folders)
